# WidgetCenter

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  stdafx.h
src/apps/: SandboxApplication.cpp  SandboxApplication.h
src/apps/base/: application.cpp  application.h
src/core/: logger.cpp  logger.h
src/win32_api/: win32window.cpp  win32window.h
